# FindPublicAncestor

./: .clang-format  .gitignore  CMakeLists.txt  automake.sh
src/: FindPublicAncestor.cpp  FindPublicAncestor.hpp  FindPublicAncestor_testing.cpp  main_testing.cpp
